--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ base64 = "0.21.0"
 tiny_http = "0.12.0"
 zeroize = "1.5.7"
 const-str = { version = "0.5.4", features = ["std"] }
+heapless = "0.7.16"
 
 [dev-dependencies]
 # Simplifies test setup and the `waitid` hack.
