Be more defensive and frugal around memory.
Two other smaller improvements:

1. Byte counter map now is optimized to not require locks as long for
   creating their snapshots. Should help reduce latency for adding
   data points for new services.
2. Got rid of multiple wrappers for types that were meant to partially
   replace the standard library. Easier to just use what's there and
   just do the small contortions necessary to adapt it to my needs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ tiny_http = "0.12.0"
 zeroize = "1.5.7"
 const-str = { version = "0.5.4", features = ["std"] }
 heapless = "0.7.16"
+human-panic = "1.1.4"
+impls = "1.0.3"
 
 [dev-dependencies]
 # Simplifies test setup and the `waitid` hack.
