Add support for TLS, simplify E2E, log key updates
Also decided to simplify some of the parent state and how the child
receives parent data while I was at it, since I already needed to make
significant modifications to it.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ libsystemd-sys = "0.9.3"
 log = { version = "0.4.17", features = ["std"] }
 notify = "5.0.0"
 base64 = "0.21.0"
-tiny_http = "0.12.0"
+tiny_http = { version = "0.12.0", features = ["ssl-openssl"] }
 zeroize = "1.5.7"
 const-str = { version = "0.5.4", features = ["std"] }
 heapless = "0.7.16"
