--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -150,6 +150,9 @@ jobs:
         os:
         - ubuntu-20.04
         - ubuntu-22.04
+        type:
+        - http
+        - https
     runs-on: ${{ matrix.os }}
     if: success() || cancelled()
     steps:
@@ -158,5 +161,5 @@ jobs:
         with:
           name: journald-exporter
       - run: chmod +x journald-exporter
-      - run: sudo useradd --system --user-group journald-exporter
-      - run: sudo node ./scripts/e2e.js -b journald-exporter
+      - run: sudo ./scripts/e2e-setup.sh
+      - run: sudo ./scripts/e2e.sh -b journald-exporter -t ${{ matrix.type }}
