--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,14 @@ libc = "0.2.137"
 libsystemd-sys = "0.9.3"
 log = { version = "0.4.17", features = ["std"] }
 notify = "5.0.0"
-base64 = "0.21.0"
 tiny_http = { version = "0.12.0", features = ["ssl-openssl"] }
 zeroize = "1.5.7"
 const-str = { version = "0.5.4", features = ["std"] }
 heapless = "0.7.16"
 human-panic = "1.1.4"
 impls = "1.0.3"
+# Match `tiny_http`
+openssl = "0.10"
 
 [dev-dependencies]
 # Simplifies test setup and the `waitid` hack.
