Switch from OpenSSL to Rustls
Easier to just not depend on OpenSSL than to fuss with whether it's the
right version or whatever. (It's very highly versioned, and tends to
vary between systems.) Also makes this a bit more portable, since it
means one does *not* need to have OpenSSL installed at all.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Show GLIBC version
         run: ldd --version
       - run: yum makecache
-      - run: yum -y install systemd-devel epel-release openssl-devel
+      - run: yum -y install systemd-devel epel-release
       - run: yum -y install jq
       - uses: actions/checkout@v3
       - name: Install Rustup (if needed)
