--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,13 @@ libc = "0.2.137"
 libsystemd-sys = "0.9.3"
 log = { version = "0.4.17", features = ["std"] }
 notify = "5.0.0"
-tiny_http = { version = "0.12.0", features = ["ssl-openssl"] }
+tiny_http = { version = "0.12.0", features = ["ssl-rustls"] }
 const-str = { version = "0.5.4", features = ["std"] }
 heapless = "0.7.16"
 impls = "1.0.3"
-# Match `tiny_http`
-openssl = "0.10"
+rustls = "0.21.1"
+base64 = "0.21.0"
+once_cell = "1.17.1"
 
 [dev-dependencies]
 # Simplifies test setup and the `waitid` hack.
