--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ impls = "1.0.3"
 rustls = "0.21.1"
 base64 = "0.21.0"
 once_cell = "1.17.1"
+toml = { version = "0.7.3", features = ["parse"] }
 
 [dev-dependencies]
 # Simplifies test setup and the `waitid` hack.
