Add support for filter-based monitoring
Note: it's config only. I have no plans on extending the CLI to allow
for this.

Took a little bit of shotgun surgery to do, unfortunately. Everything's
written for just the CLI args and just the one byte count map, and a
lot of things are testing snapshots. Also, the config code was a bit
messy on first write, so it had to be cleaned up before I could add it
in maintainably.

Also fixed a fault tolerance issue with the byte count map's snapshot
behavior and removed clonability for some types (partially out of
necessity).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,15 @@ rustls = "0.21.1"
 base64 = "0.21.0"
 once_cell = "1.17.1"
 toml = { version = "0.7.3", features = ["parse"] }
+regex = "1.8.1"
 
 [dev-dependencies]
+assert_matches = "1.5.0"
 # Simplifies test setup and the `waitid` hack.
 ctor = "0.2.0"
 quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
+rand = "0.8.5"
 tempfile = "3.4.0"
 
 [profile.test]
