--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,8 @@ base64 = "0.21.0"
 once_cell = "1.17.1"
 
 [dev-dependencies]
-quickcheck = "1.0.3"
-quickcheck_macros = "1.0.0"
 tempfile = "3.4.0"
+rand = "0.8.5"
 
 [profile.test]
 # 1. Test with release optimization settings (but retain safety checks), for increased test
